# Build-A-Lang

./: .gitignore  CMakeLists.txt  compile_flags.txt  main.cpp  test.lpp
.github/workflows/: cmake-multi-platform.yml
Includes/: AST.hpp  Arena.hpp  gen_asm.hpp  lexer.hpp  parser.hpp
Src/Assembly_Generator/: gen_asm.cpp
Src/Lexer/: lexer.cpp
Src/Parser/: parser.cpp
